# fortran-cmake-unit-tests

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh  run_tests.sh
cmake-modules/: SetCTest.cmake  SetCompileFlag.cmake  SetFortranFlags.cmake
executables/: config.f90  helloworld.f90  main.f90
modules/material_properties/: CMakeLists.txt  dry_air.f90  material_parameters.f90  moist_air.f90
tests/: test_dry_air.f90  test_helloworld.f90
